@@ -5,6 +5,7 @@ import java.beans.Encoder;
 import java.beans.XMLEncoder;
 import java.io.Serializable;
 import java.util.Arrays;
+import java.util.Base64;
 
 /**
  * 
@@ -41,7 +42,8 @@ public class ByteArray implements Serializable {
 	public void setString(String s) {
 		cache = s;
 		if(s != null)
-			bytes = new hplb.misc.BASE64Decoder().decodeBuffer(s);
+			bytes = Base64.getDecoder().decode(s);
+			//new hplb.misc.BASE64Decoder().decodeBuffer(s);
 		else 
 			bytes = null;
 	}
@@ -51,7 +53,8 @@ public class ByteArray implements Serializable {
 			return null;
 		if(cache != null)
 			return cache;
-		return new hplb.misc.BASE64Encoder(false).encodeBuffer(bytes);
+		return  Base64.getEncoder().encodeToString(bytes);
+				//new hplb.misc.BASE64Encoder(false).encodeBuffer(bytes);
 	}
 	
 	public byte[] getBytes() {
